Fix : 2번 과제와 워딩 맞추기

--- a/templates/rock_paper_scissors_game.html
+++ b/templates/rock_paper_scissors_game.html
@@ -37,7 +37,7 @@
         <tr>
             <th scope="col">#</th>
             <th scope="col">컴퓨터</th>
-            <th scope="col">유저</th>
+            <th scope="col">사용자</th>
             <th scope="col">결과</th>
         </tr>
         </thead>
